--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "isolatedModules": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
