--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
-    "typescript": "~5.7.2"
+    "typescript": "^5.7.3"
   }
 }
